force-app/main/default/objects/Therapeutic_Area__c/Therapeutic_Area__c.object-meta.xml
<CustomObject>
    <!--enableLicensing>false</enableLicensing-->
    <label>Therapeutic Area</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Therapeutic Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Therapeutic Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>