force-app/main/default/objects/Therapeutic_Area__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapeutic Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Therapeutic_Area__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Therapeutic Area</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Therapeutic_Area__c</referenceTo>
    <relationshipLabel>Conditions of Interests</relationshipLabel>
    <relationshipName>Therapeutic_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>