force-app/main/default/objects/Therapeutic_Area__c/fields/Therapeutic_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area_ID__c</fullName>
    <description>External ID for uploading COI</description>
    <externalId>true</externalId>
    <label>Therapeutic Area ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>