force-app/main/default/objects/Therapeutic_Area__c/recordTypes/Condition_of_Interests.recordType-meta.xml
<RecordType>
    <fullName>Condition_of_Interests</fullName>
    <active>true</active>
    <label>Condition of Interests</label>
</RecordType>