force-app/main/default/objects/Therapeutic_Area__c/recordTypes/Therapeutic_Area.recordType-meta.xml
<RecordType>
    <fullName>Therapeutic_Area</fullName>
    <active>true</active>
    <label>Therapeutic Area</label>
</RecordType>