force-app/main/default/objects/Therapeutic_Area__c/recordTypes/Third_Party_Condition_of_Interests.recordType-meta.xml
<RecordType>
    <fullName>Third_Party_Condition_of_Interests</fullName>
    <active>true</active>
    <label>Third Party Condition of Interests</label>
</RecordType>