force-app/main/default/objects/Therapeutic_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Therapeutic_Area__c.Condition_of_Interests</value>
    </filters>
    <label>All COI</label>
</ListView>