force-app/main/default/objects/Therapeutic_Area__c/listViews/All_3rd_party.listView-meta.xml
<ListView>
    <fullName>All_3rd_party</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Therapeutic_Area__c.Third_Party_Condition_of_Interests</value>
    </filters>
    <label>All 3rd party</label>
</ListView>