force-app/main/default/objects/Therapeutic_Area__c/listViews/All_conditions.listView-meta.xml
<ListView>
    <fullName>All_conditions</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All conditions</label>
</ListView>