force-app/main/default/objects/Therapeutic_Area__c/listViews/ALL_TA.listView-meta.xml
<ListView>
    <fullName>ALL_TA</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Therapeutic_Area__c.Therapeutic_Area</value>
    </filters>
    <label>ALL TA</label>
</ListView>