force-app/main/default/objects/Therapeutic_Area__c/listViews/X3rd_party_without_mapping.listView-meta.xml
<ListView>
    <fullName>X3rd_party_without_mapping</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Therapeutic_Area__c.Third_Party_Condition_of_Interests</value>
    </filters>
    <filters>
        <field>Therapeutic_Area__c</field>
        <operation>equals</operation>
    </filters>
    <label>New Conditions</label>
    <language>en_US</language>
</ListView>